tests/scheduling/fail/nodes-1.rs
use rust_sync::sync;

sync! {
    #![pass(2)]

    node oui() = ()
    where
        () = oui();
}

fn main() {}
