tests/scheduling/fail/nodes-1.stderr
error: scheduling error: the following nodes form a cycle : oui
 --> tests/scheduling/fail/nodes-1.rs:6:10
  |
6 |     node oui() = ()
  |          ^^^
